# UFO-List

./: .clang-format  .gitignore  .prettierrc  BUILD.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  LICENSE.md  README.md  gclados.exe.stackdump  main.exe.stackdump  make.bat  test.yaml
.default-vscode/: default-launch.json  default-settings.json  default-tasks.json
.github/workflows/: main.yml
cmake-modules/: gclados.cmake
docs/: index.html  index.js  style.css  styles.css
example/: index.html  index.js  style.css
include/card-info/: card-info.h
include/chashmap/: chashmap.h  chashmapPrivate.h
include/create-card/: create-card.h
include/css-generator/: css-generator.h
include/gclados/: arrayPredicates.h  boolPredicates.h  bytePredicates.h  colors.h  dynamicArray.h  fileUtils.h  floatPredicates.h  gclados.h  ioutils.h  logging.h  mutils.h  notPredicate.h  numberPredicates.h  panic.h  predicate.h  predicateNamespace.h  snapshots.h  statement.h  statementContext.h  stringPredicates.h  test.h  testSuite.h
include/html-generator/: html-generator.h
include/init-css/: init-css.h
include/json-parser/: json-parser.h
include/module/: module.h
include/yaml-parser/: yaml-parser.h
json-parser/src/: CMakeLists.txt  json-parser.c
json-parser/test/: CMakeLists.txt  json-parser.test.c
main/: CMakeLists.txt  card-html.c  card-info.c  card-info.h  create-card.c  create-card.h  create-css.c  create-css.h  init_css.c  main.c  outputFiles.c  outputFiles.h  utils.c  utils.h
module/src/: CMakeLists.txt  module.c
module/test/: CMakeLists.txt  module.test.c
modules/: CMakeLists.txt
modules/card-info/: CMakeLists.txt  card-info.c
modules/chashmap/src/: CMakeLists.txt  chashmap.c  chashmapHash.c  getNextEntry.c  mapFree.c  mapGetValue.c  mapInit.c  mapInsert.c  mapKeyExist.c
modules/chashmap/test/: CMakeLists.txt  chashmap.test.c  entry.c
modules/css-generator/: CMakeLists.txt  css-generator.c
modules/html-generator/: CMakeLists.txt
modules/html-generator/src/: CMakeLists.txt  freeNode.c  html-generator.c  initDefaultHTMLNode.c  initNode.c  puchChildrenNode.c  pushChildrenNode.c  pushStringLiteral.c  renderToStream.c
modules/html-generator/test/: CMakeLists.txt  entry.c  freeNode.test.c  html-generator.test.c  initDefaultHTMLNode.test.c  initNode.test.c  pushChildrenNode.test.c  pushStringLiteral.test.c  renderToStream.test.c  testUtils.c  testUtils.h
modules/yaml-parser/test/: CMakeLists.txt  entry.c  yaml-parser.test.c
root/: index.html  style.css
(+2 files in other folders)
